# ir

./: .gitattributes  .gitignore  .nojekyll  AGENTS.md  Cargo.toml  README.md  blog-post-ir-release-draft.md  build.rs  cache.html  config.html  index.html  quarto.html  reference.html  robots.txt  run.html  search.json  sitemap.xml  tools.html
.github/workflows/: ci.yml  docs.yml  e2e.yml  release.yml
docs/: .Rprofile  .gitignore  _quarto.yml  cache.qmd  config.qmd  dark.scss  index.qmd  quarto.qmd  reference.qmd  run.qmd  styles.css  tools.qmd
driver/: cache-clean.R  resolve.R  resolve_python.R  tooling.R
examples/: hello.R  hello.qmd
examples/live-demo/: 01-legacy-tidyverse.R  02-modern-tidyverse.R  03-legacy-tidyverse-report.qmd  04-modern-tidyverse-report.qmd  05-explicit-pak-refs.R  README.md  ir-live-demo.qmd
scripts/: ci-rprofile.R  install-dev-deps.ps1  install-dev-deps.sh  install-docs-r-deps.R  install-test-deps.R  install-test-r-deps.R  install.ps1  install.sh  resolve-test-r.py  setup_codex_universal.sh  update-r-version-metadata.sh  warm-renv-cache.R
site_libs/bootstrap/: bootstrap-dark-7fb2366ea9cfc589a5fa427510273c33.min.css  bootstrap-dark-9aa68caa1778ee5759e263c3b2f4abf3.min.css
src/: cache.rs  cli.rs  driver.rs  lock.rs  main.rs  python.rs  quarto.rs  quickstart.rs  quickstart.txt  resolve_cache.rs  rig.rs  rig_releases.rs  runtime.rs  script.rs  spec.rs  tool.rs
src/rig/: catalog.rs  command.rs  model.rs  r-versions.json  (+5 more)
tests/: cli.rs  render.rs  render_python.rs  resolver_lock.rs  resolver_tooling.rs  rig_selection.rs  run.rs  scripts.rs  test-resolve.R  tool.rs
(+38 files in other folders)
