[package]
name = "ir"
version = "0.1.0"
edition = "2021"
description = "Run standalone R scripts from embedded dependency metadata."
license = "MIT"

[[bin]]
name = "ir"
path = "src/main.rs"

[dependencies]
saphyr = { git = "https://github.com/t-kalinowski/saphyr", rev = "73f6994fd5dbfa7350adb3fe2f01653bb03befaf", default-features = false }

[profile.release]
strip = true
