[package]
name = "ir"
version = "0.1.0"
edition = "2021"
description = "Run standalone R scripts from embedded dependency metadata."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
saphyr = { git = "https://github.com/t-kalinowski/saphyr", rev = "73f6994fd5dbfa7350adb3fe2f01653bb03befaf", default-features = false }

[[bin]]
name = "ir"
path = "src/main.rs"

[profile.release]
strip = true
